# FungerGames

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  qml.qrc
app/qml/: Main.qml
app/src/: AppController.cpp  AppController.h  TelemetryClient.cpp  TelemetryClient.h
iot-services/device-status-service/: CMakeLists.txt  DeviceStatusServer.cpp  DeviceStatusServer.h  main.cpp
iot-services/face-tracking-service/: CMakeLists.txt  FaceTrackingServer.cpp  FaceTrackingServer.h  main.cpp
iot-services/fridge-service/: CMakeLists.txt  FridgeServiceServer.cpp  FridgeServiceServer.h  main.cpp
iot-services/game-session-service/: CMakeLists.txt  GameSessionServer.cpp  GameSessionServer.h  main.cpp
scripts/: dev.sh
